--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ i {
     background-color: gray;
 }
 
-.table_Trang3 {
+.tableTrang3 {
     border: 2px solid black;
     margin: 20px;
 }
@@ -106,7 +106,7 @@ i {
     border: 2px solid black;
     margin: 20px;
 }
-.table_Trang3 td{
+.tableTrang3 td{
     padding: 10px;
 }
 .tableTrang4 td{
